[Authentication] Finalize the Authentication backend